# EoM

./: .gitignore  README.md  main.py  pyproject.toml
global_configs/: train_arch_dse_world.json  train_cloudcast.json  train_research.json
hayekmas/: __init__.py
hayekmas/adapters/arch_dse_world/: agent.py  env.py  prompts.py  runtime.py
hayekmas/adapters/arch_dse_world/configs/: priors_per_layer.json  train_arch_dse_world-resnet50.json
hayekmas/adapters/arch_dse_world/simulator/workspace/: README.md  action_space.md  eval.py  hardware.yaml  precheck.py  refine.sh  refine_mapping.py  submit.sh
hayekmas/adapters/cloudcast/: __init__.py  agent.py  env.py  prompts.py  runtime.py  task.py  tools.py
hayekmas/adapters/cloudcast/configs/: eval.json  train.json
hayekmas/adapters/researchworld/: __init__.py  agent.py  env.py  prompts.py  runtime.py
hayekmas/adapters/researchworld/configs/: train_research.json
hayekmas/base/: __init__.py  agent.py  config.py  env.py  mas.py  pipeline.py  population.py  prompts.py
hayekmas/utils/: __init__.py  data.py  llm.py  logger.py  viz.py
scripts/arch_dse_world/: build_priors.py  dosa_bounded_edps.json  launch_24jobs_perlayer.sh  setup_arch_dse_simulator.sh  worker.sbatch
