[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hayekmas"
version = "0.1.0"
description = "Economy of Minds: Emerging Multi-Agent Intelligence with Economic Interactions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "EoM contributors"}
]
keywords = [
    "multi-agent-systems",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core dependencies used by the active adapters and shared runtime
dependencies = [
    "requests",
    "pydantic>=2.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
# LiteLLM for cloud / OpenAI-compatible APIs
litellm = [
    "litellm",
]

# CloudCast agent code execution
cloudcast = [
    "smolagents",
]

# Local inference with vLLM (includes torch)
vllm = [
    "torch==2.6.0",
    "vllm==0.8.3",
    "transformers",
    "accelerate==1.11.0",
]

# Local inference with SGLang (includes torch)
sglang = [
    "torch==2.6.0",
    "sglang==0.4.6.post5",
    "transformers",
    "accelerate==1.11.0",
]

# Cloud APIs (no GPU dependencies)
cloud = [
    "litellm",
]

# Post-hoc visualization helpers for training runs
viz = [
    "plotly>=5.18",
]

# Figure + animation dependencies for arch_dse_world experiments.
# imageio-ffmpeg ships a static ffmpeg binary so MP4 renders do not require a
# system ffmpeg.
arch_figs = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "imageio-ffmpeg>=0.4",
]

# Full local inference stack
local = [
    "torch==2.6.0",
    "vllm==0.8.3",
    "sglang==0.4.6.post5",
    "transformers",
    "accelerate==1.11.0",
]

# Everything
all = [
    "litellm",
    "smolagents",
    "torch==2.6.0",
    "vllm==0.8.3",
    "sglang==0.4.6.post5",
    "transformers",
    "accelerate==1.11.0",
    "plotly>=5.18",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "imageio-ffmpeg>=0.4",
]

# Development
dev = [
    "pytest",
    "black",
    "isort",
]

[project.scripts]
hayekmas = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hayekmas*"]

[tool.setuptools.package-data]
"*" = ["data/**/*.jsonl"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
